Signed-off-by: Erick Rocha <erick.p.rocha@gmail.com>

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron center">
   <h1>Welcome to My Pinterested App!</h1>
   <p>Pretty cool, don't you think</p>
   <!-- Standard button -->
-  <%= link_to  "Login", root_path, class:'btn btn-default' %>
-  <%= link_to  "Join us", root_path, class:'btn btn-primary' %>
+  <%= link_to  "Login", new_user_session_path, class:'btn btn-default' %>
+  <%= link_to  "Join us",new_user_registration_path, class:'btn btn-primary' %>
 </div>
