--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
 
   <body>
     <div class="container">
-      <%= yield %>
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div,msg,class:"alert alert-info")%>
+          <% end %>
+
+    <%= yield %>
     </div>
   </body>
 
