--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,9 @@
   <h1>Welcome to My Pinterested App!</h1>
   <p>Pretty cool, don't you think</p>
   <!-- Standard button -->
-  <%= link_to  "Login", new_user_session_path, class:'btn btn-default' %>
-  <%= link_to  "Join us",new_user_registration_path, class:'btn btn-primary' %>
+  <% if !user_signed_in? %>
+    <%= link_to  "Login", new_user_session_path, class:'btn btn-default' %>
+    <%= link_to  "Join us",new_user_registration_path, class:'btn btn-primary' %>
+  <% end %>
+
 </div>
