--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,27 +1,10 @@
-<p id="notice"><%= notice %></p>
+<% @pins.each do |pin| %>
 
-<h1>Pins</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pins.each do |pin| %>
-      <tr>
-        <td><%= pin.description %></td>
-        <td><%= link_to 'Show', pin %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Pin', new_pin_path %>
+  <%= link_to image_tag(pin.image.url(:medium)), pin %> </br>
+  <%= pin.description %></br>
+  <%= pin.user.email if pin.user %> </br>
+  <% if pin.user == current_user %>
+    <%= link_to 'Edit', edit_pin_path(pin) %>
+    <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+<% end %>
