--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -5,6 +5,7 @@
   <%= pin.user.name if pin.user %> </br>
   <% if pin.user == current_user %>
     <%= link_to 'Edit', edit_pin_path(pin) %>
-    <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></br>
   <% end %>
+</br>
 <% end %>
