--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,12 +1,23 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading center">
+        <%= image_tag  @pin.image.url(:medium) %>
+      </div>
+      <div class="panel-body">  
+        <strong>Description:</strong>
+        <%= @pin.description %></br>
+        <strong><%= @pin.user.name if @pin.user %></strong>
+      </div>
+      <div class="panel-footer">
+        <% if @pin.user == current_user %>
+          <%= link_to 'Edit', edit_pin_path(@pin) %> |
+        <% end %>
+        <%= link_to 'Back', pins_path %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>
-  <%= image_tag  @pin.image.url(:medium) %></br>
-  <strong>Description:</strong>
-  <%= @pin.description %></br>
-  <%= @pin.user.name if @pin.user %> </br>
-</p>
-<% if @pin.user == current_user %>
-<%= link_to 'Edit', edit_pin_path(@pin) %> |
-<% end %>
-<%= link_to 'Back', pins_path %>
+
