Signed-off-by: Erick Rocha <erick.p.rocha@gmail.com>

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -14,3 +14,11 @@
 .box img {
   width: 100%;
 }
+
+.image-box{
+  max-width: 500px;
+  max-height: 500px;
+  min-width: 30%;
+  min-height: 30%;
+
+}
