--- a/app/assets/stylesheets/bootstraply.css.scss
+++ b/app/assets/stylesheets/bootstraply.css.scss
@@ -1,6 +1,14 @@
+$navbar-default-bg: #ffffff;
+$navbar-height:40;
+$body-bg:#e9e9e9;
+$navbar-default-brand-color:#cb2027;
+$pagination-color:$navbar-default-brand-color;
+$pagination-active-bg:$navbar-default-brand-color;
+$pagination-active-border:$navbar-default-brand-color;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.center{
+.center {
   text-align: center;
 }
