--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading center">
-        <%= image_tag  @pin.image.url(:medium) %>
+        <%= image_tag  @pin.image.url,class:'image-box' %>
       </div>
       <div class="panel-body">  
         <strong>Description:</strong>
