Signed-off-by: Erick Rocha <erick.p.rocha@gmail.com>

--- a/app/assets/stylesheets/bootstraply.css.scss
+++ b/app/assets/stylesheets/bootstraply.css.scss
@@ -5,6 +5,7 @@ $navbar-default-brand-color:#cb2027;
 $pagination-color:$navbar-default-brand-color;
 $pagination-active-bg:$navbar-default-brand-color;
 $pagination-active-border:$navbar-default-brand-color;
+$jumbotron-bg:#ffffff;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
