--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
 </head>
 <%= render 'home/header' %>
 
@@ -16,7 +17,7 @@
         <%= content_tag(:div,msg,class:"alert alert-info")%>
           <% end %>
 
-    <%= yield %>
+            <%= yield %>
     </div>
   </body>
 
